--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
                     <h3 class="mbr-section-title display-2">CONTACT US</h3>
                     <small class="mbr-section-subtitle">Got a question? Need a quote? We can help!</small>
                     <a href="mailto:info@approvedtoprint.com">info@approvedtoprint.com</a>
+                    <p>Pocket: 214-649-8951</p>
                 </div>
             </div>
         </div>
