--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
                 <div class="col-xs-12 text-xs-center">
                     <h3 class="mbr-section-title display-2">CONTACT US</h3>
                     <small class="mbr-section-subtitle">Got a question? Need a quote? We can help!</small>
-                    <a href="mailto:info@approvedtoprint.com">info@approvedtoprint.com</a>
-                    <p style="color:#fff;">Pocket: 214-649-8951</p>
+                  <span style="color:#fff;">Pocket: 214-649-8951</span>
+                  <p><a href="mailto:info@approvedtoprint.com">info@approvedtoprint.com</a></p>
                 </div>
             </div>
         </div>
