--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
                 </div>
                 <div class="mbr-table-cell">
 
-                    <button class="navbar-toggler pull-xs-right hidden-md-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
+                    <button class="navbar-toggler pull-xs-right" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">EQUIPMENT</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">CONTACT</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-xl" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">EQUIPMENT</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">CONTACT</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make a website</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box3-w" data-rv-view="0" style="background-image: url(assets/images/print-collaboration-1-1980x707.jpg); padding-top: 200px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box3-w" data-rv-view="0" style="background-image: url(assets/images/print-collaboration-1-1980x707.jpg); padding-top: 200px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -66,7 +66,7 @@
             <div class="col-md-8 col-md-offset-2 text-xs-center">
                 <h3 class="mbr-section-title display-2">MAKE AN IMPRESSION</h3>
                 <div class="lead"><p>We offer a wide variety of print media to fit your needs.</p></div>
-                <div><a class="btn btn-primary" href="https://mobirise.com">PRINT YOUR IDEAS</a></div>
+                <div><a class="btn btn-primary" href="index.html#form1-13">PRINT YOUR IDEAS</a></div>
             </div>
         </div>
     </div>
@@ -241,7 +241,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT US">
 
-                        <input type="hidden" value="IlYERsg2BY9pzDGT+uz4uOJ09A+a0qiROHtg9+1tTKOwCyBRG5VEKz+NXOjwbWNAkAHz6dzM+5fF5LYM8AflQJIe2MC0ur36o9un3qCFqUxse038olwWN3l8tUGZogAd" data-form-email="true">
+                        <input type="hidden" value="GNEaT583ef1zGgtkT/TYqQUItWLYEUFcHIxyfwQj1LI7ArYi8DSKjV3/uR9C82PWHzQiMOxxFUoju3iYJh2rXVyo97OeBfO37EK8Sd7buinFt7vx+cOw8m42AOm3M6bo" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
