--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="index.html" class="navbar-logo"><img src="assets/images/a2p-logo-final-1660x128.png" alt="Mobirise"></a>
+                        <a href="index.html" class="navbar-logo"><img src="assets/images/a2p-logo-for-web-550x128.jpg" alt="Mobirise"></a>
                         
                     </div>
 
                 </div>
                 <div class="mbr-table-cell">
 
-                    <button class="navbar-toggler pull-xs-right" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
+                    <button class="navbar-toggler pull-xs-right hidden-md-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-xl" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">EQUIPMENT</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">CONTACT</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">EQUIPMENT</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">CONTACT</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box3-w" data-rv-view="0" style="background-image: url(assets/images/print-collaboration-1-1980x707.jpg); padding-top: 200px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.info/e">how to make a site for free</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box3-w" data-rv-view="0" style="background-image: url(assets/images/print-collaboration-1-1980x707.jpg); padding-top: 200px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -241,7 +241,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT US">
 
-                        <input type="hidden" value="GNEaT583ef1zGgtkT/TYqQUItWLYEUFcHIxyfwQj1LI7ArYi8DSKjV3/uR9C82PWHzQiMOxxFUoju3iYJh2rXVyo97OeBfO37EK8Sd7buinFt7vx+cOw8m42AOm3M6bo" data-form-email="true">
+                        <input type="hidden" value="KoXiM/GvCNZSM1kP4b59p8rXHhYSvU+nEMVbI+kAwc943gW0A8tKE2qMJPfA0h+ezvR5uiWUNDtQWjNLzNnYMInjThthw00h0XIhmLeyTyY/BN9y1ZJFywHS8qakc/ix" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
