--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">EQUIPMENT</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">CONTACT</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html#features3-2">EQUIPMENT</a></li><li class="nav-item"><a class="nav-link link" href="index.html#form1-13">CONTACT</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make a site for free</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box3-w" data-rv-view="0" style="background-image: url(assets/images/print-collaboration-1-1980x707.jpg); padding-top: 200px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.info/f">simple website creator</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box3-w" data-rv-view="0" style="background-image: url(assets/images/print-collaboration-1-1980x707.jpg); padding-top: 200px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -241,7 +241,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT US">
 
-                        <input type="hidden" value="KoXiM/GvCNZSM1kP4b59p8rXHhYSvU+nEMVbI+kAwc943gW0A8tKE2qMJPfA0h+ezvR5uiWUNDtQWjNLzNnYMInjThthw00h0XIhmLeyTyY/BN9y1ZJFywHS8qakc/ix" data-form-email="true">
+                        <input type="hidden" value="ggIytCzNx+CXpuDsC92rV0YHEbrnCzoI90L+LG2t30MvdXjfyFtm6oVfuAPyiRXuc/M45U8kE5c6vIPji/+O7Bt3HPjkOxkEQD4ewC4vjuySQBvlpZm/VTaNtRb5lFAa" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
