--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="index.html" class="navbar-logo"><img src="assets/images/a2p-logo-for-web-550x128.jpg" alt="Mobirise"></a>
+                        <a href="index.html" class="navbar-logo"><img src="assets/images/a2p-logo-for-web-600x128.jpg" alt="Mobirise"></a>
                         
                     </div>
 
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create a web page for free</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box3-w" data-rv-view="0" style="background-image: url(assets/images/print-collaboration-1-1980x707.jpg); padding-top: 200px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box3-w" data-rv-view="0" style="background-image: url(assets/images/print-collaboration-1-1980x707.jpg); padding-top: 200px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -241,7 +241,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT US">
 
-                        <input type="hidden" value="tbLo0Lzz9kV0xmgrfiO2sMNMruasmqAP6c9eLmqqSid0cfapRITklWh3JLswi4nwpNos8CaGt7OfF2JVRY4XDCELy6759DLUG/G6QvpNYcrFImd87Auf+QHyAwLLK0oY" data-form-email="true">
+                        <input type="hidden" value="qHRZrGr9vQQCFWbcalesDJfBp24ajEoWXTShpH6qaa1I1D7pgkIhlrCctEVD8YZ/cNdrqc2EniuAxOLOr01UrIvkd8krx8l3Nq1YOvVaOOfVLgrsJeFVGaXF8CQzaKXr" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
